# AlphaGen-Agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
docs/: GETTING_STARTED.md  OPEN_SOURCE_PROCESS.md
scripts/: batch_produce.py  build_windows_exe.py  mine_1594_pack.py  mine_1665_edge.py  mine_1841_term_structure.py  mine_corr_edge_repairs.py  mine_factor_candidates_v4.py  mine_independent_families.py  mine_orthogonal_submit_candidates.py  mine_paper_candidates.py  mine_paper_candidates_v3.py  mine_selfcorr_breakers.py  mine_subuniverse_repairs.py  mine_turnover_repairs.py  seed_research_alphas.py  seed_research_alphas_v2.py  zhipu_pr_review.py
src/alphagen_agent/: __init__.py  checks.py  cli.py  config.py  db.py  models.py  tui.py
src/wq_agent/: __init__.py  cli.py  config.py  db.py  launcher.py  submitter.py
tests/: test_brand_compat.py  test_build_windows_exe.py  test_cli_init.py  test_correlation.py  test_dedup.py  test_evaluator.py  test_fast_expr.py  test_feedback_loop.py  test_field_blacklist.py  test_gui.py  test_launcher.py  test_llm_retry.py  test_openai_provider.py  test_refine.py  test_regressions.py  test_rust_tui.py  test_submitter.py  test_tui.py  test_wrapper_diversity.py
tests/wiki/: test_auto_record.py  test_compiler.py  test_curator.py  test_embeddings.py  test_eval.py  test_importers.py  test_retrieve_channels.py  (+1 more)
tui-rs/: Cargo.toml
tui-rs/src/: main.rs
(+101 files in other folders)
