[package]
name = "alphagen-tui"
version = "0.1.0"
edition = "2021"
description = "Fast Ratatui frontend for AlphaGen Agent"
license = "MIT"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.30.2"
rusqlite = { version = "0.40", features = ["bundled"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
